# mobisys16demo

./: README.md
app/src/main/java/com/zerry/mobisys16demo/: MainActivity.java
app/src/test/java/com/zerry/mobisys16demo/: ExampleUnitTest.java
facetaglib/: CMakeLists.txt  build.sh  facetagdet.cpp  facetagdet.hpp  facetagdet_jni.cpp
facetaglib/cv2nonfree/: CMakeLists.txt  nonfree_init.cpp  precomp.hpp
mobisys16demo/: build.gradle
mobisys16demo/src/androidTest/java/com/zerry/mobisys16demo/: ApplicationTest.java
mobisys16demo/src/main/: AndroidManifest.xml
mobisys16demo/src/main/java/com/zerry/mobisys16demo/: FaceTagDet.java  MainActivity.java
mobisys16demo/src/main/res/layout/: activity_main.xml
mobisys16demo/src/main/res/values/: strings.xml
server/: _init_paths.py  gestureModel.py  server.py  wingdbstub.py
